// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar render avatar ITypeAvatar.icon 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 30,
      "height": 60,
      "justifyContent": "center",
      "width": 60,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#FFF",
        "fontFamily": "Neotis",
        "fontSize": 30,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`Avatar render avatar ITypeAvatar.text 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 30,
      "height": 60,
      "justifyContent": "center",
      "width": 60,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar not photo 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 30,
      "height": 60,
      "justifyContent": "center",
      "width": 60,
    }
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "uri": "https://vraki.net/",
      }
    }
    style={
      {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar with photo L 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 45,
      "height": 90,
      "justifyContent": "center",
      "width": 90,
    }
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      {
        "borderRadius": 45,
        "height": 90,
        "width": 90,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar with photo S 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 18,
      "height": 36,
      "justifyContent": "center",
      "width": 36,
    }
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      {
        "borderRadius": 18,
        "height": 36,
        "width": 36,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar with photo XL 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 60,
      "height": 120,
      "justifyContent": "center",
      "width": 120,
    }
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      {
        "borderRadius": 60,
        "height": 120,
        "width": 120,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar with photo without size 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 30,
      "height": 60,
      "justifyContent": "center",
      "width": 60,
    }
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      }
    }
  />
</View>
`;

exports[`Avatar render without avatar 1`] = `null`;
